--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Open2C
-description: the Open Chromosome Collective (Open2C)
+description: We are the Open Chromosome Collective (Open2C)
 theme: jekyll-theme-cayman
