--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Open2C
 description: We are the Open Chromosome Collective (Open2C)
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins: 
+  - jekyll-remote-theme
+github: [metadata]
